<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0mm"
        android:layout_weight="3"
        android:orientation="horizontal">

      <ImageView
          android:scaleType="centerCrop"
          android:id="@+id/adminInsert_cover"
          android:onClick="Onclick_addpic"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0mm"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:textAlignment="center"
            android:hint="@string/villa_title"
            android:id="@+id/VTitle"
            android:layout_width="match_parent"
            android:layout_height="0mm"
            android:layout_weight="0.14" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.14"
            android:layout_width="match_parent"
            android:layout_height="0mm">
            <EditText
                android:id="@+id/VCost"
                android:textAlignment="center"
                android:hint="@string/villa_cost"
                android:layout_width="0mm"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
            <EditText
                android:id="@+id/VCost_weeken"
                android:textAlignment="center"
                android:hint="@string/villa_cost_weekend"
                android:layout_width="0mm"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
            <EditText
                android:id="@+id/VCost_special"
                android:textAlignment="center"
                android:hint="@string/villa_cost_special"
                android:layout_width="0mm"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <EditText
            android:id="@+id/VRoomCnt"
            android:textAlignment="center"
            android:hint="@string/villa_roomcnt"
            android:layout_width="match_parent"
            android:layout_height="0mm"
            android:layout_weight="0.14"/>

        <EditText
            android:id="@+id/VCapacity"
            android:textAlignment="center"
            android:hint="@string/villa_capacity"
            android:layout_width="match_parent"
            android:layout_height="0mm"
            android:layout_weight="0.14"/>

        <EditText
            android:id="@+id/VArea"
            android:textAlignment="center"
            android:hint="@string/villa_area"
            android:layout_width="match_parent"
            android:layout_height="0mm"
            android:layout_weight="0.14"/>
        <EditText
            android:id="@+id/VAdderss"
            android:textAlignment="center"
            android:hint="@string/villa_address"
            android:layout_width="match_parent"
            android:layout_height="0mm"
            android:layout_weight="0.14"/>
    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map_InsertVilla"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="0mm"
        android:layout_weight="3"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0mm"
        android:layout_weight="1">

        <Button
            android:onClick="Onclick_BtnCancle"
            android:text="لغو"
            android:textAlignment="center"
            android:layout_weight="0.25"
            android:layout_width="0mm"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/BtnAction"
            android:textAlignment="center"
            android:layout_weight="0.25"
            android:layout_width="0mm"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/BtngoToGallery"
            android:text="گالری"
            android:layout_width="0mm"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/m_uploadBtn"
            android:text="آپلود"
            android:layout_width="0mm"
            android:layout_weight="0.25"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
